<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_rumors"
            android:icon="@drawable/ic_menu_rumors"
            android:title="@string/menu_rumors" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/menu_information" />
    </group>
</menu>