<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@color/fragment_overview_area"
        android:gravity="center"
        android:text="@string/overview_area"
        android:textColor="@color/darkBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginStart="1dp"
        android:background="@color/fragment_overview_curConfirmedCount"
        android:gravity="center"
        android:text="@string/overview_curConfirmed"
        android:textColor="@color/darkBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginStart="1dp"
        android:background="@color/fragment_overview_confirmedCount"
        android:gravity="center"
        android:text="@string/overview_confirmed"
        android:textColor="@color/darkBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginStart="1dp"
        android:background="@color/fragment_overview_deadCount"
        android:gravity="center"
        android:text="@string/overview_death"
        android:textColor="@color/darkBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginStart="1dp"
        android:background="@color/fragment_overview_curedCount"
        android:gravity="center"
        android:text="@string/overview_cured"
        android:textColor="@color/darkBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>